--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.gaurav</groupId>
     <artifactId>system-design-lld</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>concurrency</module>
+        <module>ram-queue</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
